# Simple-Term-Deposit-Calculator

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/mclib/template/application/: cli.py
src/simple_term_deposit_calculator/application/: cli.py
src/simple_term_deposit_calculator/calculator/: __init__.py  simple.py
src/simple_term_deposit_calculator/schemas/: interest_paid.py  projected_savings.py
tests/: test_cli.py  test_simple_term_deposit_calculator.py
